tests/unit/default/syntax-error/143-add-fk-alias.x.t
---- IN ----
+FK@alias|
---- OUT ----
---- ERR ----
syntax: expected <fk-map> after `+FK@alias` near `|` at position 9 - at line 1
---- EXIT ----
1
